// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageListContainer ImageListContainer matches snapshot for Favorited tab 1`] = `
<div
  className="mainContainer"
>
  <div
    className="listContainerFullWidth"
  >
    <h1
      className="heading"
    >
      Photos
    </h1>
    <div
      className="tabList"
    >
      <div
        className="tabListItem"
        onClick={[Function]}
      >
        Recently added
      </div>
      <div
        className="tabListItem"
        onClick={[Function]}
      >
        Favorited
      </div>
    </div>
    <div
      className="imageList"
    >
      <div
        className="imageListItem"
        data-testid="image-list-item"
        onClick={[Function]}
      >
        <img
          alt="tennessee_female_rubber.jpg"
          className="imageListItemImg"
          src="https://agencyanalytics-api.vercel.app/images/0.jpg"
          tabIndex={0}
        />
        <div
          className="imageListItemName"
        >
          tennessee_female_rubber.jpg
        </div>
        <div
          className="imageListItemSize"
        >
          4.6 MB
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ImageListContainer ImageListContainer matches snapshot for Recently added tab 1`] = `
<div
  className="mainContainer"
>
  <div
    className="listContainerFullWidth"
  >
    <h1
      className="heading"
    >
      Photos
    </h1>
    <div
      className="tabList"
    >
      <div
        className="tabListItem"
        onClick={[Function]}
      >
        Recently added
      </div>
      <div
        className="tabListItem"
        onClick={[Function]}
      >
        Favorited
      </div>
    </div>
    <div
      className="imageList"
    >
      <div
        className="imageListItem"
        data-testid="image-list-item"
        onClick={[Function]}
      >
        <img
          alt="virginia.jpg"
          className="imageListItemImg"
          src="https://agencyanalytics-api.vercel.app/images/1.jpg"
          tabIndex={0}
        />
        <div
          className="imageListItemName"
        >
          virginia.jpg
        </div>
        <div
          className="imageListItemSize"
        >
          4.1 MB
        </div>
      </div>
      <div
        className="imageListItem"
        data-testid="image-list-item"
        onClick={[Function]}
      >
        <img
          alt="tennessee_female_rubber.jpg"
          className="imageListItemImg"
          src="https://agencyanalytics-api.vercel.app/images/0.jpg"
          tabIndex={0}
        />
        <div
          className="imageListItemName"
        >
          tennessee_female_rubber.jpg
        </div>
        <div
          className="imageListItemSize"
        >
          4.6 MB
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ImageListContainer ImageListContainer matches snapshot if user have selected an image 1`] = `
<div
  className="mainContainer"
>
  <div
    className="listContainerSplitWidth"
  >
    <h1
      className="heading"
    >
      Photos
    </h1>
    <div
      className="tabList"
    >
      <div
        className="tabListItem"
        onClick={[Function]}
      >
        Recently added
      </div>
      <div
        className="tabListItem"
        onClick={[Function]}
      >
        Favorited
      </div>
    </div>
    <div
      className="imageList"
    >
      <div
        className="imageListItem"
        data-testid="image-list-item"
        onClick={[Function]}
      >
        <img
          alt="virginia.jpg"
          className="imageListItemImg"
          src="https://agencyanalytics-api.vercel.app/images/1.jpg"
          tabIndex={0}
        />
        <div
          className="imageListItemName"
        >
          virginia.jpg
        </div>
        <div
          className="imageListItemSize"
        >
          4.1 MB
        </div>
      </div>
      <div
        className="imageListItem"
        data-testid="image-list-item"
        onClick={[Function]}
      >
        <img
          alt="tennessee_female_rubber.jpg"
          className="imageListItemImg"
          src="https://agencyanalytics-api.vercel.app/images/0.jpg"
          tabIndex={0}
        />
        <div
          className="imageListItemName"
        >
          tennessee_female_rubber.jpg
        </div>
        <div
          className="imageListItemSize"
        >
          4.6 MB
        </div>
      </div>
    </div>
  </div>
  <div
    className="sheetContainer"
  >
    <div
      className="imageSheet"
    >
      <div>
        <img
          alt="tennessee_female_rubber.jpg"
          className="image"
          src="https://agencyanalytics-api.vercel.app/images/0.jpg"
        />
        <div
          className="imgNameAndFavtIconContainer"
        >
          <div
            className="imageName"
          >
            tennessee_female_rubber.jpg
          </div>
          <div
            className="favtIcon favtIconFilled"
            data-testid="fav-icon"
            onClick={[Function]}
          />
        </div>
        <div
          className="imageSize"
        >
          4.6 MB
        </div>
      </div>
      <div
        className="imgDetails"
      >
        <div
          className="informationLabel"
        >
          Information
        </div>
        <div
          className="row"
        >
          <div
            className="label"
          >
            Uploaded by
          </div>
          <div
            className="value"
          >
            Ms. Jimmie Cole
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="label"
          >
            Created
          </div>
          <div
            className="value"
          >
            July 15, 2017
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="label"
          >
            Last modified
          </div>
          <div
            className="value"
          >
            December 16, 2022
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="label"
          >
            Dimensions
          </div>
          <div
            className="value"
          >
            4800 X 3200
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="label"
          >
            Resolutions
          </div>
          <div
            className="value"
          >
            72 X 72
          </div>
        </div>
      </div>
      <div
        className="imgDescription"
      >
        <div
          className="label"
        >
          Description
        </div>
        <div
          className="description"
        >
          Laboriosam eligendi inventore officia nemo. Quisquam explicabo voluptatem. Illo laborum facilis.
        </div>
      </div>
      <div
        className="deleteBtnFooter"
      >
        <button
          className="button"
          onClick={[Function]}
        >
          Delete
        </button>
      </div>
    </div>
  </div>
</div>
`;
